--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ nav {
   justify-content: space-between;
 }
 
-.stamp {
+.header-stamp {
   margin-left: 60px;
   width: 91px;
   height: 33px;
@@ -45,7 +45,7 @@ nav {
   text-align: left;
 }
 
-.icon {
+.header-icon {
   margin-right: 60px;
   width: 28px;
   height: 19px;
@@ -83,22 +83,20 @@ nav {
   height: 60px;
   float: right;
 }
-
-.card-name {
+.card-inform>p:nth-of-type(1) {
   padding-top: 40px;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 2px;
   margin: 0;
 }
-
-.card-job {
+.card-inform>p:nth-of-type(2) {
   font-size: 16px;
   line-height: 24px;
   margin: 0;
 }
 
-.card-explain {
+.card-inform>p:nth-of-type(3) {
   font-size: 18px;
   line-height: 28px;
   margin-top: 34px;
@@ -113,8 +111,7 @@ nav {
   height: 14px;
   float: left;
 }
-
-.card-twitter-id {
+.card-twitter p {
   font-size: 14px;
   line-height: 14px;
   margin-left: 27px;
@@ -128,8 +125,7 @@ nav {
   display: flex;
   justify-content: space-between;
 }
-
-.footer-rights {
+.footer-background p {
   font-size: 14px;
   margin-left: 60px;
 }
