--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
 .App {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+p, span {
+  margin: 0;
+  rotate: 0.05deg;
+}
+
+div,
+input,
+textarea,
+nav {
+  box-sizing: border-box;
+}
+
+input {
+  outline-style: none;
+}
+
+.wrapping {
+  width: 1440px;
+  height: 900px;
+  border: 1px solid grey;
+  background-image: url("http://localhost:3000/img/Background.png"), 
+  linear-gradient(to bottom, rgba(50, 43, 46, 0.4), rgba(50, 43, 46, 0.9) 99%);;
+  background-size: cover;
+}
+
+.header-background {
+  width: 100%;
+  height: 160px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 96px 0 72px;
+}
+.header-background>img {
+  width: 91.9px;
+  height: 25px;
+}
+
+.header-contents {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  column-gap: 60px;
+}
+.header-contents>span {
+  font-size: 17px;
+  line-height: 23px;
+  letter-spacing: 0.2px;
+  color: #fff;
+}
+
+.header-search {
+  display: flex;
+  align-items: center;
+}
+.header-search>img {
+  width: 17.5px;
+  height: 17.5px;
+  margin-right: 30.5px;
+}
+.header-search>button {
+  width: 94px;
+  height: 45px;
+  background-color: rgba(255, 255, 255, 0.1);
+  opacity: 0.3;
+  border-radius: 100px;
+  border: solid 1px #fff;
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.2px;
+  cursor: pointer;
+}
+#menu {
+  display: none;
+}
+
+.middle-background {
+  width: 100%;
+  height: 350px;
+  text-align: center;
+  color: #ffffff;
+  vertical-align: middle;
+  padding: 65px 465px 50px 465px;
+}
+.middle-background>span {
+  font-size: 56px;
+  line-height: 65px;
+  letter-spacing: -0.4px;
+}
+.middle-background>p {
+  font-size: 17px;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  opacity: 0.6;
+  color: #d0e5ff;
+}
+
+.middle-facebook {
+  width: 354px;
+  height: 54px;
+  margin-top: 42.6px;
+  background-color: #1a82ff;
+  border: solid 1.5px hsl(0, 0%, 44%);
+  border-radius: 100px;
+  cursor: pointer;
+}
+.middle-facebook>img {
+  width: 9px;
+  height: 16px;
+  color: #fff;
+  float: left;
+  margin: 3px 60px 0 24px;
+}
+.middle-facebook>p {
+  font-size: 16px;
+  text-align: left;
+  color: #fff;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+}
+
+.middle-form-explain {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 20px;
+  padding-top: 85px;
+  justify-content: center;
+  align-items: center;
+}
+.middle-form-explain div {
+  width: 487px;
+  height: 1px;
+  opacity: 0.2;
+  background-color: #fff;
+}
+.middle-form-explain p {
+  width: 156px;
+  opacity: 0.8;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.56;
+  letter-spacing: 0.2px;
+  text-align: center;
+  color: #d0e5ff;
+}
+
+.bottom-background {
+  width: 100%;
+  padding-top: 98px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bottom-account-input input {
+  width: 360px;
+  height: 36px;
+  margin: 10px;
+  background-color: rgba(255, 255, 255, 0);
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  text-align: left;
+  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  color:rgba(255, 255, 255, 0.2);
+}
+.bottom-background>button {
+  width: 748px;
+  height: 54px;
+  border: 1px solid #707070;
+  border-radius: 4px;
+  background-color: #ff165e;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  color: #ffffff;
+  cursor: pointer;
+}
+.bottom-background>p {
+  margin-top: 49px;
+  font-size: 16px;
+  line-height: 25px;
+  letter-spacing: 0.2px;
+  color: #d0e5ff;
+  opacity: 0.4;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
